# PacketSight

./: .gitignore  Dockerfile  README.md  app.py  config.py  database_manager.py  docker-compose.yml  init_db.py  main.py  models.py  network_analyzer.py  packet_simulator.py  pcap_parser.py  pyproject.toml  real_packet_capture.py  requirements.txt  routes.py  simple_models.py
Docs/: DEPLOYMENT.md  DOCUMENTATION.md  PROJECT_ASSESSMENT.md  PROJECT_AUDIT_REPORT.md
static/css/: style.css
static/js/: analytics.js  charts.js  dashboard.js  real_time_activity.js
templates/: analytics.html  base.html  dashboard.html  dashboard_fixed.html  documentation.html  flows.html  packets.html  upload.html
