[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "netifaces>=0.11.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "scapy>=2.6.1",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
